
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_6__ {scalar_t__ frame_pts; scalar_t__ frame_ready; } ;
struct TYPE_5__ {scalar_t__ frame_pts; scalar_t__ frame_ready; } ;
struct TYPE_7__ {TYPE_2__ a; scalar_t__ has_audio; TYPE_1__ v; scalar_t__ has_video; } ;
typedef TYPE_3__ mp_media_t ;
typedef scalar_t__ int64_t ;



__attribute__((used)) static inline int64_t mp_media_get_next_min_pts(mp_media_t *m)
{
 int64_t min_next_ns = 0x7FFFFFFFFFFFFFFFLL;

 if (m->has_video && m->v.frame_ready) {
  if (m->v.frame_pts < min_next_ns)
   min_next_ns = m->v.frame_pts;
 }
 if (m->has_audio && m->a.frame_ready) {
  if (m->a.frame_pts < min_next_ns)
   min_next_ns = m->a.frame_pts;
 }

 return min_next_ns;
}
